k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kovan-fe-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: kovan.local # Uygulamanıza erişmek istediğiniz domain adı (örn: kovan.com)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kovan-fe-service
            port:
              number: 80
